feat: add dark/light mode toggle functionality

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>Theme Toggle App</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
+  <button id="theme-toggle" class="theme-toggle">Dark Mode</button>
+  
+  <h1>Theme Toggle Demo</h1>
+  <p>클릭하여 라이트/다크 모드를 전환해 보세요.</p>
+  
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
