Relocate Disqus comments above inquiry form and rebuild integration

--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
   <h1>Theme Toggle Demo</h1>
   <p>클릭하여 라이트/다크 모드를 전환해 보세요.</p>
 
+  <!-- 댓글 섹션을 제휴 문의 위로 이동 -->
+  <section class="comments-section">
+    <div class="comments-card">
+      <h2>커뮤니티 댓글</h2>
+      <div id="disqus_thread"></div>
+      <script>
+          /**
+          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+          var disqus_config = function () {
+            this.page.url = window.location.href;  
+            this.page.identifier = window.location.pathname; 
+          };
+          (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://product-15.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </div>
+  </section>
+
   <section class="contact-section">
     <div class="contact-card">
       <h2>제휴 문의</h2>
@@ -41,23 +65,6 @@
         <button type="submit" class="submit-btn">문의하기</button>
       </form>
     </div>
-  </section>
-
-  <section class="comments-section">
-    <div id="disqus_thread"></div>
-    <script>
-        var disqus_config = function () {
-            this.page.url = window.location.href;  // Dynamically sets the current URL
-            this.page.identifier = window.location.pathname; // Uses the path as a unique ID
-        };
-        (function() { 
-            var d = document, s = d.createElement('script');
-            s.src = 'https://product-15.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </section>
   
   <script defer type="text/javascript" src="/main.js"></script>
